# fastapi_sqlalchemy_youtube

./: README.md  crud.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_01_27_1945-f54b901c4626_create_products_table.py  2025_01_27_1955-a076cc217c26_create_users_and_products_table.py  2025_01_27_2001-4d3fa8722822_create_posts_table.py  2025_01_27_2114-1e5d0b4470ea_create_profile_table.py  2025_01_28_1742-7d5aec98dd25_create_orders_table.py  2025_01_28_1805-0d55520aa1c0_create_orders_product_association_table.py  2025_01_28_2048-c8f4e525e161_add_column_column_to_order_product_.py  2025_01_28_2122-5f39417c1126_add_column_unit_price_to_order_product_.py
app_v1/products/: crud.py  dependencies.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixin.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
