[tool.poetry]
name = "fastapi-sqlalchemy-youtube"
version = "0.1.0"
description = ""
authors = ["Vitalii <vitaly.savenko12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.7"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
