[tool.poetry]
name = "fastapi-sqlalchemy-youtube"
version = "0.1.0"
description = ""
authors = ["Vitalii <vitaly.savenko12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.7"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
aiosqlite = "^0.20.0"
pydantic-settings = "^2.7.1"
uvicorn = {extras = ["standart"], version = "^0.34.0"}
pydantic = "^2.10.6"
alembic = "^1.14.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
